başlıyom ben köpke. annem dışarı çıkalım dedi de çıkarsak gece yapcam

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Burak Sezer</title>
 </head>
 <body>
-    <div class="container">Selamun Aleyküm Dünya</div>
-    <div>Ve Aleykümselam cemaati müslümin</div>
+    <div class="container">Başlıyom ben köpke. Boey kırmızısını yediler</div>
+    
 </body>
 </html>
