ben sevdim burayı kanks :d

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Burak Sezer</title>
 </head>
 <body>
-    <div class="container">Başlıyom ben köpke. Boey kırmızısını yediler</div>
-    
+    <p>annemi dışarı çıkarıyom köpke gece başlıcam :d </p>
 </body>
 </html>
